# angel-cloud-auth-bridge

./: .env  .env.example  .gitignore  Aggregate Price by Location as of 10_06_2025.csv  CLAUDE.md  README.md  Shanebrain_Strategist_Tool.ipynb  __init__.py  angel-auth-bridge.js  angel_chat_v2.js  api.py  dispatch_calculator_service.js  launch_angel_cloud.js  legacy_ai_integration_client.js  main.py  mega-dashboard.html  package-lock.json  package.json  pulsar_security_core.js  pyproject.toml  shanebrain_ai_console_prototype.ipynb  test_data_parser.py  voice_mode_final.js
aggregate_pricer.egg-info/: PKG-INFO
logistics_api/: pyproject.toml  quoter.py  requirements.txt
public/: index.html
sessions/: session_2025-10-07.txt
